kube/networkpolicy-external.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pci-allow-ingress
  namespace: postcodeinfo-dev
spec:
  podSelector:
    matchLabels:
      name: pci
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-external
      ports:
        - port: 10080
          protocol: TCP
        - port: 10443
          protocol: TCP
  policyTypes:
    - Ingress
