kube/networkpolicy-internal.yaml
---
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"acp-deny-all","namespace":"postcodeinfo-dev"},"spec":{"podSelector":{}}}
    generation: 1
    name: acp-deny-all
    namespace: postcodeinfo-dev
  spec:
    podSelector: {}
    policyTypes:
      - Ingress

- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    generation: 1
    name: pci-allow-ingress
    namespace: postcodeinfo-dev
  spec:
    ingress:
      - from:
          - namespaceSelector:
              matchLabels:
                name: ingress-internal
        ports:
          - port: 10080
            protocol: TCP
          - port: 10443
            protocol: TCP
    podSelector:
      matchLabels:
        name: pci
    policyTypes:
      - Ingress
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
